absensi-khs.html

--- a/absensi-khs.html
+++ b/absensi-khs.html
@@ -596,7 +596,7 @@
             
             // Kirim data ke Google Apps Script
             try {
-                const response = await fetch('URL_GOOGLE_APPS_SCRIPT', {
+                const response = await fetch('https://script.google.com/macros/s/AKfycbzYOK0qdK0BtcBC4H3GyWsKuALX8nZY1KHZzeenhdyvsNrPqPvS69gjlFZdthZGJ4aO/exec', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
